# DV6

./: Cargo.toml  README.md  openocd_devebox.cfg  watch_rtt.sh
.cargo/: config.toml
.run/: blackpill (debug).run.xml
embedded-midi/: Cargo.toml
embedded-midi/src/: lib.rs  message.rs  packet.rs  status.rs  sysex.rs
src/: allocator.rs  log_defmt.rs  main.rs  resource.rs  sysex.rs
src/apps/: blinky_beat.rs  dw6_control.rs  lfo.rs  mod.rs
src/devices/arturia/: beatstep.rs
src/devices/korg/: dw6000.rs
src/devices/sequential/: evolver.rs
src/display/: mod.rs
src/port/: midi_usb.rs  mod.rs  serial.rs  serial_buffered.rs
