[package]
edition = "2021"
name = "dv6"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
#embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"] }
#embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"] }
embassy-stm32 = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"] }
embassy-sync = { version = "0.3", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.3", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-usb = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0.0-rc.1"
embedded-io = { version = "0.6" }
embedded-io-async = { version = "0.6" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
heapless = { version = "0.7", default-features = false }
nb = "1"
#embedded-storage = "0.3.0"
micromath = "2"
static_cell = { version = "1.1", features = ["nightly"] }
chrono = { version = "^0.4", default-features = false }
bitfield = "0.14"

buddy-alloc = "0.5"
hashbrown = "0.14"
#nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }

num_enum = { version = "0.7", default-features = false }
num = { version = "0.4", default-features = false }

embedded-midi = { path = "./embedded-midi", features = ["defmt", "embassy"] }
#lvgl = { version = "0.6.2", default-features = false }

[features]
default = []
rng = []
#usb = []
usb_otg = []
stm32h7 = []
stm32f4 = []
#stm32f1 = []

# todo parameterize target board
#bluepill = ["usb", "stm32f1", "embassy-stm32/stm32f103c8"]
blackpill = ["usb_otg", "stm32f4", "embassy-stm32/stm32f411ce"]
devebox = ["usb_otg", "stm32h7", "embassy-stm32/stm32h743vi"]
blackpill2 = ["usb_otg", "stm32f4", "embassy-stm32/stm32f411ce"]

[profile.release]
debug = 2
